argocd/apps/mosquitto/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
  name: mosquitto
spec:
  type: ClusterIP
  ports:
  - name: broker
    port: 1883
    protocol: TCP
    targetPort: broker
  selector:
    app: mosquitto
